force-app/main/default/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>nepa_document_revision__c</fullName>
        <description>Indicates which revision of the document (e.g., first revised Draft EIS).</description>
        <inlineHelpText>Indicates which revision of the document (e.g., first revised Draft EIS).</inlineHelpText>
        <label>Document Revision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_document_type__c</fullName>
        <description>Type of document (e.g., NOI, Draft EIS, Final EIS, ROD).</description>
        <inlineHelpText>Type of NEPA document.</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOI</fullName>
                </value>
                <value>
                    <fullName>Draft EIS</fullName>
                </value>
                <value>
                    <fullName>Supplemental EIS</fullName>
                </value>
                <value>
                    <fullName>Programmatic EIS</fullName>
                </value>
                <value>
                    <fullName>Final EIS</fullName>
                </value>
                <value>
                    <fullName>ROD</fullName>
                </value>
                <value>
                    <fullName>Environmental Assessment</fullName>
                </value>
                <value>
                    <fullName>FONSI</fullName>
                </value>
                <value>
                    <fullName>CE Determination</fullName>
                </value>
                <value>
                    <fullName>Memorandum to File</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Comment Response</fullName>
                </value>
                <value>
                    <fullName>Alternatives Analysis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_prepared_by__c</fullName>
        <description>Responsible entity that prepared this document.</description>
        <inlineHelpText>Responsible entity that prepared this document.</inlineHelpText>
        <label>Prepared By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_public_access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this document is publicly accessible. True = publicly visible; False = restricted to agency staff.</description>
        <inlineHelpText>Check to make this document publicly visible on the portal.</inlineHelpText>
        <label>Public Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_publish_date__c</fullName>
        <description>Publication or submission date.</description>
        <inlineHelpText>Publication or submission date.</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_revision_number__c</fullName>
        <description>Numeric revision sequence number of the document.</description>
        <inlineHelpText>Numeric revision sequence number.</inlineHelpText>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_status__c</fullName>
        <description>Document production phase.</description>
        <inlineHelpText>Current production phase of this document.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_supplement_number__c</fullName>
        <description>If the document is a supplement to another document, this indicates the sequence number of the supplement.</description>
        <inlineHelpText>Supplement sequence number (if this is a supplemental document).</inlineHelpText>
        <label>Supplement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_volume_title__c</fullName>
        <description>Title of a specific document section or volume (e.g., Appendix 1 - Location Maps, Chapter 3 - Affected Environment).</description>
        <inlineHelpText>Title of this document section or volume.</inlineHelpText>
        <label>Volume / Section Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <!-- CEQ Standard v1.2 additions -->
    <fields>
        <fullName>nepa_related_document__c</fullName>
        <description>ContentDocumentId of a related NEPA document (e.g., links a Final EIS to its Draft EIS). Stored as Text because Salesforce does not permit Lookup fields targeting ContentDocument/ContentVersion. Maps to CEQ standard Related Document IDs property.</description>
        <inlineHelpText>ContentDocumentId of the related NEPA document (e.g., the Draft EIS this Final EIS responds to).</inlineHelpText>
        <label>Related Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_notes__c</fullName>
        <description>Additional notes or context for this document not captured by other fields.</description>
        <inlineHelpText>Additional notes or context for this document.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_url__c</fullName>
        <description>Online link to the document, if publicly available.</description>
        <inlineHelpText>Public URL where this document can be accessed.</inlineHelpText>
        <label>Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>nepa_related_case_event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Case Event (ApplicationTimeline) that this document is associated with (e.g., NOI publication event).</description>
        <inlineHelpText>Case event milestone that produced or is associated with this document.</inlineHelpText>
        <label>Related Case Event</label>
        <referenceTo>ApplicationTimeline</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>NEPA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_contributing_agencies__c</fullName>
        <description>Agencies that contributed to preparation or review of this document.</description>
        <inlineHelpText>Agencies that contributed to preparation or review of this document.</inlineHelpText>
        <label>Contributing Agencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_document_summary__c</fullName>
        <description>Machine-readable summary of the document structure, including table of contents and short descriptions of sections. Include at minimum: project, process, high-level case events, and associated GIS data.</description>
        <inlineHelpText>Document table of contents and section summaries (structured data per CEQ Document Structures guidance).</inlineHelpText>
        <label>Document Summary / TOC</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_document_files__c</fullName>
        <description>Optional JSON reference to document files associated with this record (per CEQ standard Document Files property added in v1.2).</description>
        <inlineHelpText>JSON references to document file attachments or external file locations.</inlineHelpText>
        <label>Document Files (JSON)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_record_category__c</fullName>
        <description>Administrative record classification for this document, supporting FOIA and litigation needs.</description>
        <inlineHelpText>Administrative record category for this document.</inlineHelpText>
        <label>Record Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supporting Analysis</fullName>
                </value>
                <value>
                    <fullName>Public Comment</fullName>
                </value>
                <value>
                    <fullName>Agency Communication</fullName>
                </value>
                <value>
                    <fullName>Decision Record</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <!-- Provenance fields (CEQ Standard v1.2 - required on all entities) -->
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>The version of the record, for tracking updates or changes to the data.</description>
        <inlineHelpText>Version of this record for data exchange tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>The name of the agency or organization that provided the data.</description>
        <inlineHelpText>Agency or organization that provided this data.</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>The system or database where the data originally came from.</description>
        <inlineHelpText>Source system or database for this record.</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>The agency responsible for maintaining or owning this record.</description>
        <inlineHelpText>Agency responsible for owning and maintaining this record.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>The date and time when this record was retrieved from its source.</description>
        <inlineHelpText>Date and time this record was retrieved from its source system.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <!-- Priority 3: AI-assisted document generation fields -->
    <fields>
        <fullName>nepa_ai_generated__c</fullName>
        <description>Indicates this document was fully or partially generated by an AI system (e.g., Agentforce document generation). Required for administrative record defensibility — AI-generated content must be disclosed and SME-reviewed before publication.</description>
        <inlineHelpText>Check if this document was generated by an AI system. AI-generated documents require SME review before publication.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>AI Generated</label>
        <type>Checkbox</type>
    </fields>

    <fields>
        <fullName>nepa_clm_template_id__c</fullName>
        <description>ID of the CLM template used to generate this document. Enables traceability from document back to the template version and clause library. Populated by Agentforce document generation action.</description>
        <inlineHelpText>CLM template ID used to generate this document (populated automatically for AI-generated documents).</inlineHelpText>
        <label>CLM Template ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>nepa_reviewer__c</fullName>
        <description>User assigned to review and approve this document before publication. Required for AI-generated documents and for any document that will be included in the administrative record.</description>
        <inlineHelpText>User responsible for reviewing and approving this document.</inlineHelpText>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Documents Under Review</relationshipLabel>
        <relationshipName>NEPA_Documents_UnderReview</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>nepa_reviewed_date__c</fullName>
        <description>Date the document was reviewed and approved for publication or inclusion in the administrative record. Set by the reviewer when they approve the document.</description>
        <inlineHelpText>Date this document was reviewed and approved.</inlineHelpText>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>nepa_process__c</fullName>
        <description>Direct Lookup to the IndividualApplication (NEPA process) this document belongs to. Set on upload or by the NEPA_AdminRecord_AutoCreate flow. Provides a stable, queryable parent reference that survives ContentDocumentLink traversal limitations in OmniScript Integration Procedures (Phase 2). Enables SOQL FROM ContentVersion WHERE nepa_process__c = :processId without going through ContentDocumentLink.</description>
        <inlineHelpText>The NEPA permitting process this document belongs to.</inlineHelpText>
        <label>NEPA Process</label>
        <deleteConstraint>SetNull</deleteConstraint>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>NEPA Documents</relationshipLabel>
        <relationshipName>NEPA_Documents</relationshipName>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>nepa_section_tags__c</fullName>
        <description>One or more document sections represented in this file. Used for Phase 2 RAG-based document retrieval to scope search to specific EIS/EA sections. Multi-select to support files that span multiple sections (e.g., a combined Affected Environment + Environmental Consequences chapter).</description>
        <inlineHelpText>Select all EIS/EA sections covered by this document.</inlineHelpText>
        <label>Section Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Purpose and Need</fullName><default>false</default><label>Purpose and Need</label></value>
                <value><fullName>Alternatives</fullName><default>false</default><label>Alternatives</label></value>
                <value><fullName>Affected Environment</fullName><default>false</default><label>Affected Environment</label></value>
                <value><fullName>Environmental Consequences</fullName><default>false</default><label>Environmental Consequences</label></value>
                <value><fullName>Mitigation</fullName><default>false</default><label>Mitigation</label></value>
                <value><fullName>Appendix</fullName><default>false</default><label>Appendix</label></value>
                <value><fullName>Full Document</fullName><default>false</default><label>Full Document</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <fields>
        <fullName>nepa_main_document__c</fullName>
        <description>Indicates whether this file is the primary/main document (true) or supporting material such as an appendix, attachment, or supplemental file (false). Aligns with NEPATEC2.0 main_document flag.</description>
        <inlineHelpText>Check if this is the main document. Leave unchecked for appendices, attachments, and supplemental files.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Main Document</label>
        <type>Checkbox</type>
    </fields>
    <!-- Mandate 4: AI EIS section generation fields -->
    <fields>
        <fullName>nepa_section_type__c</fullName>
        <description>Single-select EIS section type for AI-generated drafts. Distinct from nepa_section_tags__c (multi-select taxonomy) — this identifies the primary section being drafted by NEPA_EIS_Section_Assembler. Required for OMB M-24-10 AI disclosure and 40 CFR 1502 section traceability.</description>
        <inlineHelpText>EIS section this document represents. Set automatically by AI draft generation; editable by SME reviewer.</inlineHelpText>
        <label>EIS Section Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Purpose and Need</fullName><default>false</default><label>Purpose and Need</label></value>
                <value><fullName>Affected Environment</fullName><default>false</default><label>Affected Environment</label></value>
                <value><fullName>Alternatives</fullName><default>false</default><label>Alternatives</label></value>
                <value><fullName>Environmental Consequences</fullName><default>false</default><label>Environmental Consequences</label></value>
                <value><fullName>Mitigation Measures</fullName><default>false</default><label>Mitigation Measures</label></value>
                <value><fullName>Cumulative Impacts</fullName><default>false</default><label>Cumulative Impacts</label></value>
                <value><fullName>Index</fullName><default>false</default><label>Index</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_draft_source__c</fullName>
        <description>Provenance of this document draft. AI-Generated = fully machine-authored by NEPA_EIS_Section_Assembler; Human-Authored = entirely written by staff; AI-Assisted = AI-generated draft subsequently edited by a human. Required for OMB M-24-10 AI use disclosure. AI-Generated documents must be reviewed by a Subject Matter Expert before publication.</description>
        <inlineHelpText>Who authored this document. AI-Generated drafts require SME review and sign-off before inclusion in the administrative record.</inlineHelpText>
        <label>Draft Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>AI-Generated</fullName><default>false</default><label>AI-Generated</label></value>
                <value><fullName>Human-Authored</fullName><default>false</default><label>Human-Authored</label></value>
                <value><fullName>AI-Assisted</fullName><default>false</default><label>AI-Assisted</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>

    <!-- FRA Page Limit Compliance fields (2023 FRA: 75 pages EA, 150 Draft EIS, 300 Final EIS — excluding appendices and citations) -->
    <fields>
        <fullName>nepa_is_appendix__c</fullName>
        <description>True when this file is an appendix, attachment, or citation supplement rather than core NEPA document text. FRA page limits (EA = 75, Draft EIS = 150, Final EIS = 300) explicitly exclude appendices. This flag is the basis for the FRA Page Limit Compliance Report: core text files count against the limit; appendices do not.</description>
        <inlineHelpText>Appendices and citation supplements are excluded from FRA page limits. Check this for any file that is not core document text.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Is Appendix / Supplement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_page_count__c</fullName>
        <description>Page count of this document's core text, excluding citations and appendices per FRA 42 U.S.C. 4336a. For files where nepa_is_appendix__c = false, this rolls up to the FRA compliance report. Populated manually by the uploader or automatically by an Apex PDFPageCount action on insert.</description>
        <inlineHelpText>Page count of core document text only. Do not include appendix or citation pages — those are excluded from FRA page limits.</inlineHelpText>
        <label>Page Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_fra_page_limit__c</fullName>
        <description>FRA statutory page limit for this document type: EA = 75, Draft EIS = 150, Final EIS = 300. Set by a before-save flow based on nepa_document_type__c. Null for document types with no statutory limit (CE documents, appendices, supporting analysis). Stored here to enable report formula comparisons without a CMT lookup.</description>
        <inlineHelpText>FRA statutory page limit: EA = 75, Draft EIS = 150, Final EIS = 300. Null for exempt types.</inlineHelpText>
        <label>FRA Page Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_fra_overlimit__c</fullName>
        <description>Formula checkbox: true when nepa_page_count__c exceeds nepa_fra_page_limit__c for a core text file (nepa_is_appendix__c = false). Drives the FRA Page Limit Compliance Report filter and the NEPA_SLA_Escalation_Monitor warning. False/null for appendices, CE documents, and files without page counts.</description>
        <inlineHelpText>True when this document exceeds its FRA statutory page limit. Appendices are excluded from this calculation.</inlineHelpText>
        <formula>AND(
  NOT(nepa_is_appendix__c),
  NOT(ISBLANK(nepa_page_count__c)),
  NOT(ISBLANK(nepa_fra_page_limit__c)),
  nepa_page_count__c &gt; nepa_fra_page_limit__c
)</formula>
        <label>FRA Page Limit Exceeded</label>
        <type>Checkbox</type>
    </fields>
    <!-- Sponsor chain-of-custody fields (FRA project sponsor document drafting — Mandate 3) -->
    <fields>
        <fullName>nepa_document_custody__c</fullName>
        <description>Chain-of-custody status for FRA sponsor-prepared documents. Agency Original: no sponsor involvement. Sponsor Draft: uploaded by the project sponsor portal user, not yet reviewed. Agency Under Review: assigned to an agency reviewer. Agency Modified: agency made substantive edits. Agency Adopted: agency independently evaluated and formally adopted the document per FRA requirements. History tracking enabled — the transition from Sponsor Draft to Agency Adopted is the key APA defensibility record.</description>
        <inlineHelpText>Custody status of this document. Sponsor Draft documents must reach Agency Adopted before use in the official administrative record.</inlineHelpText>
        <label>Document Custody Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Agency Original</fullName><default>true</default><label>Agency Original</label></value>
                <value><fullName>Sponsor Draft</fullName><default>false</default><label>Sponsor Draft</label></value>
                <value><fullName>Agency Under Review</fullName><default>false</default><label>Agency Under Review</label></value>
                <value><fullName>Agency Modified</fullName><default>false</default><label>Agency Modified</label></value>
                <value><fullName>Agency Adopted</fullName><default>false</default><label>Agency Adopted</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_sponsor_submitted_by__c</fullName>
        <description>Portal username or display name of the project sponsor who uploaded this document. Auto-populated by the portal submission flow for Sponsor Draft documents. Part of the FRA chain-of-custody record that proves the agency received and independently reviewed sponsor-prepared materials.</description>
        <inlineHelpText>Project sponsor portal user who submitted this draft. Auto-populated for sponsor-submitted documents.</inlineHelpText>
        <label>Sponsor Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_agency_adopted_date__c</fullName>
        <description>Date the agency formally adopted this sponsor-prepared document into the official administrative record. The period between document upload and this date quantifies the agency's independent review time — a critical metric for demonstrating supervisory control in APA litigation. Required when nepa_document_custody__c = Agency Adopted.</description>
        <inlineHelpText>Date the agency formally adopted this sponsor-prepared document. Captures independent review duration for APA defensibility.</inlineHelpText>
        <label>Agency Adopted Date</label>
        <type>Date</type>
    </fields>
    <!-- AR Export fields (Mandate 4: 60-day Administrative Record package) -->
    <fields>
        <fullName>nepa_ar_included__c</fullName>
        <description>True when this file has been marked for inclusion in a formal Administrative Record export package. Set by the NEPA_AR_Export process. Allows the AR exporter to filter ContentVersion records to exactly the documents designated for the AR without querying all files attached to the process.</description>
        <inlineHelpText>This document is included in the Administrative Record export package.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Included in AR Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_ar_index_number__c</fullName>
        <description>Sequential index number assigned to this document within an Administrative Record export package. Court-ready AR packages require a numbered document index. Assigned by the NEPA_AR_Export process when nepa_ar_included__c is set to true.</description>
        <inlineHelpText>AR package document index number. Assigned automatically when the AR export is compiled.</inlineHelpText>
        <label>AR Index Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>nepa_permit_document</fullName>
        <active>true</active>
        <description>A type of document associated to NEPA permitting processes</description>
        <label>Document</label>
    </recordTypes>
    <fields>
        <fullName>nepa_record_completeness__c</fullName>
        <description>Numeric completeness score (0-100) calculated by NEPA_Record_Completeness_Scorer flow indicating how complete the document record is.</description>
        <label>Record Completeness</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nepa_record_completeness_updated__c</fullName>
        <description>Timestamp when nepa_record_completeness__c was last calculated by the completeness scorer flow.</description>
        <label>Record Completeness Updated</label>
        <type>DateTime</type>
    </fields>
</CustomObject>